[metadata]
name = technical
version = attr: technical.__version__
author = Freqtrade Team
author_email = freqtrade@protonmail.com
description = Technical Indicators for Financial Analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/freqtrade/technical
project_urls =
    Bug Tracker = https://github.com/freqtrade/technical/issues
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Office/Business :: Financial :: Investment
    Intended Audience :: Science/Research

[options]
zip_safe = False
include_package_data = True
install_requires =
          TA-Lib
          pandas
tests_require =
    pytest
    pytest-cov
    pytest-mock

packages = find:
python_requires = >=3.9

[options.packages.find]
where = .

[flake8]
max-line-length = 100
extend-ignore = E203
